updated .gitignore so that folders with analysis data are not included

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,15 @@ Segments/
 hlBehaviors/
 llBehaviors/
 
+# Analysis
+experimentList.txt
+errorCharacAndAnalysis/
+BACKUP-PreMzRotAmplitudeChange/
+2013Sept_EarlyFC_TrainTestSamples/
+2013Sept_BackUp-PreMzRotAmplitudeChange/
+2013July_PreliminaryParamAdjustment/
+2013Aug_PreliminaryFCAdjustment/
+
 # Figures
 *.png
 *.jpeg
