--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
-# RCBHT
-/Composites
-/Segments
-/hlBehaviors
-/llBehaviors
+TrainingData/
+prelim*/
+Old/
+2013Aug_PreliminaryFCAdjustment/
+2013July_PreliminaryParamAdjustment/
+2013Sept_BackUp-PreMzRotAmplitudeChange/
+2013Sept_EarlyFC_TrainTestSamples/
+BACKUP-PreMzRotAmplitudeChange/
+errorCharacAndAnalysis/
+listOfExperiments.txt
 
 # Figures
 *.png
